<resources>
    <string name="app_name">m</string>
    <string name="phone_no">pnone number*</string>
    <string name="login">LOGIN</string>
    <string name="phoneno">phone</string>
    <string name="password">password*</string>
    <string name="phone_no_m">phone no</string>
    <string name="pass_m">password*</string>
    <string name="enter_pass">enterpass</string>
    <string name="forgot_pass">Forget Password?</string>
    <string name="new_to_app">New To Inclinix?</string>
    <string name="patient_signup">Patient Sign Up</string>
    <string name="copy_right_by_margasoft">copyright @ 2020-21 Powered by Peoplelink Unified Communications Pvt Ltd </string>
    <string name="signup">signup</string>
    <string name="title">title</string>
    <string name="inp_fname">First Name</string>
    <string name="inp_lname">Last Name</string>
    <string name="gender_m">gender</string>
    <string name="male">Male</string>
    <string name="fmale">Female</string>
    <string name="others">others</string>
    <string name="email_address_m">emailaddress</string>
    <string name="dob_m">Date Of Birth</string>
    <string name="dob">dob</string>
    <string name="blood_group_m">Blood Group</string>
    <string name="email_address">emil address</string>
    <string name="enter_your_address">Enter your address</string>
    <string name="pat_address">Address</string>
    <string name="label_country">country</string>
    <string name="state_m">state</string>
    <string name="city_m">city</string>
    <string name="pass_hint">password</string>
    <string name="create_account">create account</string>
    <string name="alrdy_have_acct">already u have a account</string>
    <string name="terms_conditions">terms </string>
    <string name="submit">SUBMIT</string>
    <string name="back_to_login">Back To Login</string>

</resources>