<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?android:attr/colorBackground">

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true">

        <androidx.appcompat.widget.AppCompatSpinner
            android:id="@+id/lanSpinner"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/black_border"
            android:spinnerMode="dropdown"
            android:text="English" />
    </RelativeLayout>

    <LinearLayout
        android:layout_width="369dp"
        android:layout_height="447dp"
        android:layout_centerInParent="true"
        android:orientation="vertical">

        <ImageView
            android:layout_width="120dp"
            android:layout_height="149dp"
            android:layout_gravity="center"
            android:src="@drawable/in" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:textColor="@color/black"
            android:text="Forgot Password"
            android:textAlignment="center"
            android:textStyle="bold" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Enter your registered Mobile Number and we'll Send you an OTP to reset your Password"
            android:textAlignment="center" />

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="48dp"
            android:text="@string/phone_no_m" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:orientation="horizontal">

            <com.hbb20.CountryCodePicker
                android:id="@+id/countryCodePicker"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:clickable="true"
                android:focusable="true"
                android:gravity="center_vertical"
                app:ccp_contentColor="@color/colorPrimaryDarkExtra"
                app:ccp_hintExampleNumber="true"
                app:ccp_showNameCode="false"
                app:ccp_showPhoneCode="false" />

            <androidx.appcompat.widget.AppCompatEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@android:color/transparent"
                android:hint="@string/phone_no"
                android:inputType="phone"
                android:paddingStart="8dp"
                android:paddingLeft="8dp"
                android:paddingTop="16dp"
                android:paddingBottom="16dp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/b1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="36dp"
                android:onClick="onLoginButtonClick"
                android:paddingTop="12dp"
                android:paddingBottom="12dp"
                android:text="@string/submit"
                app:backgroundTint="@color/colorPrimaryBlue"
                app:cornerRadius="4dp" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_gravity="center"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/arrow"/>
            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/signup"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_gravity="center"
                android:gravity="center"
                android:layout_marginLeft="8dp"
                android:onClick="gotoSignup"
                android:text="@string/back_to_login"
                android:textColor="@color/colorPrimaryBlue" />
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>

    <TextView
        android:id="@+id/copuright_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginTop="16dp"
        android:gravity="center"
        android:text="@string/copy_right_by_margasoft"
        android:textColor="@color/disableBlack"
        android:textSize="14sp" />
</RelativeLayout>
